# chat-bar

./: .gitmodules  .justfile  GNUmakefile  README.md
chat-bar/: Cargo.toml  Makefile
chat-bar/script/: chat.py
chat-bar/src/: lib.rs  main.rs  msg.rs  p2p.rs  ui.rs
