[package]
name = "chat_bar"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"


[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
libp2p = { version = "0.54.1", features = [
  "tokio",
  "gossipsub",
  "mdns",
  "noise",
  "macros",
  "tcp",
  "yamux",
  "quic",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.114"
hostname = "0.3.1"
ratatui = "0.29"
crossterm = { version = "0.27.0" }
#tui-input = "*"
once_cell = "1.19.0"
tui-input = "0.11.1"
