[package]
name = "chat_bar"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
async-trait = "0.1"
crossterm = { version = "0.27.0" }
futures = "0.3.30"
git2 = "0.19.0"
hostname = "0.3.1"
libp2p = { version = "0.54.1", features = [
  "tokio",
  "gossipsub",
  "mdns",
  "noise",
  "macros",
  "tcp",
  "yamux",
  "quic",
] }
#tui-input = "*"
once_cell = "1.19.0"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-input = "0.11.1"
ureq = { version = "2", features = ["json", "charset"] }
