[package]
name = "chat_bar"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
async-trait = "0.1"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0" }
env_logger = "0.10.1"
futures = "0.3.30"
git2 = { version = "0.19.0" }
hostname = "0.3.1"
libp2p = { version = "0.54.1", features = [
  "tokio",
  "gossipsub",
  "mdns",
  "noise",
  "macros",
  "tcp",
  "yamux",
  "quic",
] }
once_cell = "1.19.0"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.1.39" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-input = "0.11.1"
tui-menu = "0.3.0"
ureq = { version = "2", features = ["json", "charset"] }
